fix text cutoff

--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ hr {
   padding-right: 0px;
   padding-bottom: 50px;
   max-width: 1000px;
-  overflow: hidden;
   height: auto;
 
 }
@@ -95,7 +94,6 @@ hr {
     max-width: 1000px;
     height: auto;
     margin-bottom: 50px;
-    overflow: hidden;
 }
 
 .text-body {
@@ -149,4 +147,5 @@ h1.header {
     float: left;
     margin-right: 50px;
     overflow: hidden;
+    max-height: 400px;
 }
